--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span> Veselé Vánoce🎄 a šťastný nový rok! ⭐</span></div><small>Last update: 17.12.2024 07:04:05 | Praha: 8°C, Zataženo</small><a id="top"></a><table ><nav id="lunchbar"><div class="info-bar">Last update: 17.12.2024 07:04:05 | Praha: 8°C, Zataženo</div><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span> Veselé Vánoce🎄 a šťastný nový rok! ⭐</span></div><small>Last update: 17.12.2024 07:38:53 | Praha: 8°C, Zataženo</small><a id="top"></a><table ><nav id="lunchbar"><div class="info-bar">Last update: 17.12.2024 07:38:53 | Praha: 8°C, Zataženo</div><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -121,85 +121,10 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_23934">Pondělí 16. 12.</a>
-</div>
 <div class="item js-bookmark active">
 <a class="link js-bookmark-switcher" href="#day_23935">Úterý 17. 12.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_23934">
-<tr>
-<td class="volume">1ks</td>
-<td class="name">
-<span class="title cond">Plněný paprikový lusk v rajské omáčce</span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s houskovým knedlíkem</p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Přírodní kuřecí steak na tymiánu, </span>
-<span class="allergen">(A: 1, 12)</span>
-<p class="desc">mačkané cibulové brambory </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Kuřecí nudličky na kari, </span>
-<span class="allergen">(A: 1, 4, 6, 7)</span>
-<p class="desc">zázvoru a kokosovém mléce, rýže </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Minutkový chilli guláš </span>
-<span class="allergen">(A: 1, 10, 12)</span>
-<p class="desc">z vepřové panenky, hranolky </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Holandský smažený řízek</span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">mačkané cibulové brambory</p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">JACK DANIELS BURGER, </span>
-<span class="allergen">(A: 1, 3, 7, 11, 12)</span>
-<p class="desc">hranolky a coleslaw </p>
-</td>
-<td class="price cond">
-        189 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Kuřecí burger </span>
-<span class="allergen">(A: 1, 3, 7, 11, 12)</span>
-<p class="desc">se slaninou, cibulí, čedarem, rajčaty, pikantní dip, hranolky a coleslaw </p>
-</td>
-<td class="price cond">
-        189 Kč    </td>
-</tr>
-</table>
 <table class="list js-bookmark-block" id="day_23935" style="display:table;">
 <tr>
 <td class="volume"></td>
@@ -248,6 +173,46 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 <td class="price cond">
         149 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Krůtí závitek, </span>
+<span class="allergen">(A: 1, 7)</span>
+<p class="desc">plněný slaninou a nivou, šťouchané brambory (A: 1, 7)</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Smažený sýr gouda </span>
+<span class="allergen">(A: 1, 3, 7, 10, 12)</span>
+<p class="desc">s vařeným bramborem a tatarskou omáčkou </p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">JACK DANIELS BURGER, </span>
+<span class="allergen">(A: 1, 3, 7, 11, 12)</span>
+<p class="desc">hranolky a coleslaw </p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Kuřecí burger </span>
+<span class="allergen">(A: 1, 3, 7, 11, 12)</span>
+<p class="desc">se slaninou, cibulí, čedarem, rajčaty, pikantní dip, hranolky a coleslaw </p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
 </tr>
 </table>
 </div>
