--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span> Veselé Vánoce🎄 a šťastný nový rok! ⭐</span></div><small>Last update: 17.12.2024 08:36:52 | Praha: 8°C, Zataženo</small><a id="top"></a><table ><nav id="lunchbar"><div class="info-bar">Last update: 17.12.2024 08:36:52 | Praha: 8°C, Zataženo</div><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span> Veselé Vánoce🎄 a šťastný nový rok! ⭐</span></div><small>Last update: 17.12.2024 09:04:04 | Praha: 8°C, Slabý déšť</small><a id="top"></a><table ><nav id="lunchbar"><div class="info-bar">Last update: 17.12.2024 09:04:04 | Praha: 8°C, Slabý déšť</div><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -24,13 +24,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -109,7 +103,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#x1F51D;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske kari s kousky rybich filetu {tunak maly, sumecek, stitnik}, zeleninou, kokosovym mlekem a citronovou travou, jasminova ryze 169</li><li>Pecena cerstva kambala a platyz s omackou aiolli, pecene brambory, salatek z cervene repy 199</li><li>Burrito s grilovanymi kurecimi prsicky v mexicke marinade, salsou z cerstvych rajcat a pekingskym zelim, korenena ryze, salatek {L} 169</li><li>Italske houbove rizoto s parmezanem a uzenym hovezim jazykem, salatek z cervene repy 199</li><li>Indicka kvetakova pakora {cizrnove smazenky} s cibulkou a panc phoron, pohanka se smazenou cibulkou, jogurtovy dip, salatek 169</li></ol>
+<ol><li>Grilovane biftecky ze sekanych rybich filetu {hejk, makrela, losos} s petrzelkou a spetkou papriky, okurkove tzatziki, korenena ryze, salatek {L} 169</li><li>Linguine s cerstvymi olihnemi a rajcatovou omackou puttanesca s bazalkou, ancovickami, olivami a spetkou chilli {L} 205</li><li>Thajske hovezi massaman kari s paprikami, bramborami, kokosovym mlekem, arasidy a vonavym korenim, jasminova ryze 169</li><li>Doruzova pecena veprova panenka s peprovou omackou, gratinovane brambory, salatek {L} 199</li><li>Bramborove halusky s brynzou a krupavou smazenou cibulkou {L} 169</li></ol>
 </td>
 </tr>
 </table>
