--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Veselé Vánoce 🎄 a šťastný nový rok! ⭐</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 18.12.2024 08:32:11 | Praha: 4°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Veselé Vánoce 🎄 a šťastný nový rok! ⭐</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 18.12.2024 09:03:33 | Praha: 4°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -30,13 +30,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -115,7 +109,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#x1F51D;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky ze sekanych rybich filetu {hejk, makrela, losos} s petrzelkou a spetkou papriky, okurkove tzatziki, korenena ryze, salatek {L} 169</li><li>Linguine s cerstvymi olihnemi a rajcatovou omackou puttanesca s bazalkou, ancovickami, olivami a spetkou chilli {L} 205</li><li>Thajske hovezi massaman kari s paprikami, bramborami, kokosovym mlekem, arasidy a vonavym korenim, jasminova ryze 169</li><li>Doruzova pecena veprova panenka s peprovou omackou, gratinovane brambory, salatek {L} 199</li><li>Bramborove halusky s brynzou a krupavou smazenou cibulkou {L} 169</li></ol>
+<ol><li>Peceny filet z cerstveho lososoviteho pstruha s kaparovym maslem, stouchane brambory s porkem, salatek z cervene repy 175</li><li>Yeoneojang – cerstvy losos marinovany po korejsku v sojove omacce s citrony s nakladanym zazvorem a cervenou cibuli, jasminova ryze, salatek 205</li><li>Laosky larb – pikantni opekane veprove se sladkokyselou limetkovou zalivkou a ryzovymi nudlemi s cerstvou zeleninou a zelenymi bylinkami 169</li><li>Bramborove gnocchi s trhanym kralikem pecenym na bilem vine a korenove zelenine, hobliny grana padano, salatek {L} 199</li><li>Maghrebska zapecena saksuka s rajcaty, paprikami, vejci a balkanskym syrem, jasminova ryze, salatek 169</li></ol>
 </td>
 </tr>
 </table>
