--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Veselé Vánoce 🎄 a šťastný nový rok! ⭐</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 18.12.2024 09:36:54 | Praha: 4°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Veselé Vánoce 🎄 a šťastný nový rok! ⭐</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 18.12.2024 10:03:09 | Praha: 5°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -63,7 +63,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>150g Stroganov ze sojového masa, rýže Basmatic 1, 7, 10</div>
+<div class="polozka"><span class="poradi">4. </span>350g Baklažánové lasagne 1, 3, 7</div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
